# cesar-p-core

./: .coveragerc  .dockerignore  .env  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yml  Dockerfile  EnergyPlus-9.3.0-baff08990c-Linux-x86_64.sh  EnergyPlus-9.5.0-de239b2e5f-Linux-Ubuntu20.04-x86_64.sh  README.rst  cesar-p-config-overview.yaml  copyright.tmpl  mypy.ini  pypi-project-description.md  pyproject.toml
docs/: Configuration_Description.xlsx
docs/source/: Makefile  api.rst  conf.py  developer-notes.rst  development-commands.rst  faq.rst  history-releasenotes.rst  index.rst  input-files-format.rst  installation.rst  make.bat  references.rst  result-summary.rst  usage_configuration.rst
docs/source/SWArchitecture/: building-block-view.rst  cross-cutting-concepts.rst  detailed-design-diagrams.rst  index.rst  introduction-and-goals.rst
docs/source/features/: construction-and-operation.rst  construction-retrofit.rst  geometry.rst  graph-db.rst  index.rst  life-cycle-emissions-costs.rst  neighbourhood.rst  passive-cooling.rst  sia2024-dhw-demand.rst  sia2024.rst
docs/source/public/: conf.py  faq.rst  history-releasenotes.rst  index.rst  installation.rst  references.rst  requirements.txt
paper/: paper.bib  paper.md
readthedocs/: requirements.txt
src/cesarp/: __init__.py
src/cesarp/SIA2024/: CSVYFileDumper.py  NullParametersFactory.py  SIA2024BuildingType.py  SIA2024DataAccessor.py  SIA2024Facade.py  SIA2024Parameters.py  SIA2024ParametersFactory.py  SIA2024ParamsManager.py  SIA2024_2016_RoomType.py  __init__.py  sia2024_default_config.yml
src/cesarp/common/: AgeClass.py  CesarpException.py  DatasetMetadata.py  ScheduleFile.py  ScheduleFixedValue.py  ScheduleTypeLimits.py  ScheduleValues.py  __init__.py  config_loader.py  csv_reader.py  csv_writer.py  filehandling.py  myPintDefs.txt  version_info.py
tests/: __init__.py  manual_test.py
tests/test_SIA2024/: test_SIA2024Facade.py
tests/test_common/: test_age_class.py
tests/test_common_profiles/: test_profile_generation.py  test_profile_variability.py
tests/test_config/: test_config.py
tests/test_construction/: test_AgeClass.py  test_ConstructionBasics.py  test_input_parser.py
tests/test_energy_strategy/: test_energy_strategy_nep.py  test_energy_strategy_wwb.py
tests/test_eplus_adapter/: test_auxiliary_files_handler.py  test_construction_writing.py  test_eio_reader.py  test_eplus_adapter.py  test_eplus_error_file_handling.py  test_solar_potential.py
tests/test_eplus_run/: test.idf  test_eplus_running.py
tests/test_geometry/: test_GeometryBuilder.py  test_area_calc.py  test_building.py  test_csv_parser.py  test_neighbourhood.py  test_shp_parser.py  test_vertices_basics.py
tests/test_graphdb_access/: list_with_default_constr.txt  test_constructions_local.py
tests/test_helpers/: mock_objects_generator.py  test_helpers.py
tests/test_idf_constrcution_db_access/: test_ArchetypeIDFBased.py  test_IDFArchetypicalConstructionFactory.py
tests/test_integration/: test_cesar_integration.py  test_cesar_integration_nosim_allg.py  test_cesar_integration_nosim_ep85.py  test_cesar_integration_nosim_ep93.py  test_cesar_integration_nosim_ep95.py
tests/test_manager/: test_BldgModelFactory.py  test_idf_batches.py
tests/test_model/: test_model_pickling.py
tests/test_night_ventilation/: test_night_ventilation.py
tests/test_operational_emissons_and_costs/: test_operational_emissons_and_costs.py
tests/test_pint/: test_pint_definitions.py
tests/test_results/: test_result_analyzing.py
tests/test_retrofit/: test_costs_calc.py  test_emissions_calc.py  test_energy_perspective_retrofitter.py  test_integration.py  test_retrofit_log.py  test_single_constr_retrofit.py
tests/test_site_and_weather/: test_weather_swiss_communities.py
tests/test_window_shading/: test_window_shading.py
(+913 files in other folders)
