[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "cesar-p"
version = "1.3.0"
description = "Combined Energy Simulation And Retrofit"
authors = ["Leonie Fierz <leonie.fierz@empa.ch>"]
homepage = "https://github.com/hues-platform/cesar-p-core"
repository = "https://github.com/hues-platform/cesar-p-core"
documentation = "https://cesar-p-core.readthedocs.io/en/latest/"
readme = "pypi-project-description.md"
classifiers=['Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
    'Operating System :: Microsoft :: Windows', 
    'Operating System :: POSIX :: Linux'
]
packages = [
    { include = "cesarp", from="src" }
]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.16.5"
pandas = "^0.25.1"
PyYaml = "^5.1.2"
eppy = "^0.5.52"
python-contracts = "^0.1.4"
pint = "^0.10.1"
xlrd = "^1.2.0"
esoreader = "^1.2.3"
jsonpickle = "1.3"
geopandas = { version = "^0.7.0", optional = true }
rdflib = "^4.2.2"
SPARQLWrapper = "^1.8.5"
scipy = "^1.5.2"
Shapely = "^1.7.1"
[tool.poetry.dev-dependencies]
pytest = "^coverage>=4.5.4"
pytest-cov = "^2.8"
flake8 = "^3.7.8"
black = "^19.10b0"
sphinx = "^2.2"
sphinx_rtd_theme = "^0.4.3"
MyPy = "^0.750.0"
memory-profiler = "^0.55.0"
geomeppy = { version = "^0.11.6", optional = true }
pytest-html = "^2.1.1"
licenseheaders = "^0.8.7"

[tool.poetry.extras]
geopandas = ["geopandas"]
geomeppy = ["geomeppy"]

[tool.black]
line-length = 180
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
