[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "cesar-p"
version = "2.3.1"
description = "Combined Energy Simulation And Retrofit"
authors = ["Urban Energy Systems Lab - Empa"]
homepage = "https://github.com/hues-platform/cesar-p-core"
repository = "https://github.com/hues-platform/cesar-p-core"
documentation = "https://cesar-p-core.readthedocs.io/en/latest/"
readme = "pypi-project-description.md"
classifiers=['Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
    'Operating System :: Microsoft :: Windows', 
    'Operating System :: POSIX :: Linux'
]
packages = [
    { include = "cesarp", from="src" }
]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"  # <3.10 forced by scipy
numpy = "^1.20"
pandas = "^1.3"
PyYaml = "^5.4"
eppy = "^0.5"
python-contracts = "^0.1"
pint = "^0.17"
esoreader = "^1.2"
jsonpickle = "^2.0.0"  # attention, with version 2.0.0 you cannot read serialzed BuildingContainer objects created with versions < 2.0.0 (it messes up with the py/id, check out tests/test_model/test-model_pickling.py to see the error)
geopandas = { version = "^0.9.0", optional = true }
rdflib = "^6.0"
SPARQLWrapper = "^1.8"
scipy = "^1.7"
Shapely = "^1.7"
geomeppy = { version = "^0.11", optional = true }
openpyxl = "^3.0"
types-PyYAML = "^5.4.3"
types-six = "^0.1.7"
requests = "^2.26.0"
types-requests = "^2.26.2"

[tool.poetry.dev-dependencies]
pytest = "^coverage>=5.5"
pytest-cov = "^2.12"
flake8 = "^3.9.2"
black = "^21.7b0"
sphinx = "^4.1.1"
sphinx_rtd_theme = "^0.5.2"
MyPy = "^0.910"
memory-profiler = "^0.58.0"
pytest-html = "^3.1.1"
licenseheaders = "^0.8.8"

[tool.poetry.extras]
geopandas = ["geopandas"]
geomeppy = ["geomeppy"]

[tool.black]
line-length = 180
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
